--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
         <section class="content about" id="about">
           <span>Homepage of Hyowon Kim in astronomy</span>
           <h1>ABOUT</h1>
-          <h1 class="name">HYOWON KIM [Hyo-Won-Kim]</h1>
+          <h1 class="name">HYOWON KIM </h1>
+          <h2>[Hyo-Won-Kim/ jyo.won.kim/ 金孝元]</h2>
           <p>
             " I like animals, especially cats and sea turtles. I like to play PC Game, TRPG and read and watch Science Fiction(Philip Kindred Dick, Andy Weir, ChoYeop Kim). <br class="blank" />
             Nowadays, I'm learning Spanish and drawing Oil pastel paintings. And my specialty is ruining baking. Only one of the third can survive. <br class="blank" />
@@ -116,7 +117,7 @@
           <div class="content-inner">
             <h2>Education</h2>
             <ul>
-              <li><a>2017-2024.Feb.planned) University of Science and Technology, Korea, Astrophysics and space science major, Integrated Ph.D. course.</a></li>
+              <li><a>2017-<b>2024.Feb.planned</b>) University of Science and Technology, Korea, Astrophysics and space science major, Integrated Ph.D. course.</a></li>
               <li><a>2010-2015) Kyung Pook National University, Department of Astronomy and Atmospheric science, Bachelor of Astronomy</a></li>
             </ul>
           </div>
@@ -127,10 +128,10 @@
           <div class="content-inner">
             <h2>Research Interest</h2>
             <ul>
-              <li><a>Formation and evolution of Brightest cluster galaxy</a></li>
-              <li><a>Formation and evolution of the galaxy cluster</a></li>
-              <li><a>Effect from Large-scale structure as Environments of the galaxy cluster</a></li>
-              <li><a>High-z evolution of BCG and Galaxy cluster (proto-cluster and LBGs)</a></li>
+              <li><a>Formation and evolution of brightest cluster galaxies</a></li>
+              <li><a>Formation and evolution of galaxy clusters</a></li>
+              <li><a>Effect from large-scale structure as environments of the galaxy cluster</a></li>
+              <li><a>High-z evolution of BCG and galaxy cluster (proto-cluster and LBGs)</a></li>
               <li><a>Observational cosmology</a></li>
             </ul>
           </div>
