--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
             <h2>-Paper:Co-author</h2>
             <ul>
               <li>
-                  "BCG alignment with the Locations of Cluster Members and the Large Scale Structure out to 10 R_200", Smith Rory et al, 2023, MNRAS, Accepted</a>
+                 <u><a link="" href="https://arxiv.org/abs/2308.08622" target="_blank"> 
+                   "BCG alignment with the Locations of Cluster Members and the Large Scale Structure out to 10 R_200", Smith Rory et al, 2023, MNRAS, Accepted</a></u>
               </li>
               <li>
                 <u><a link="" href="http://arxiv.org/abs/2205.08161" target="_blank">
