--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
               <li><a>Languages: IDL, Python</a></li>
               <li><a>WebD: HTML/CSS, JavaScript</a></li>
               <li>
-                <a>Utilities: Topcat, IRAF, specpro, Photometry programs(SExtractor, SCAMP, SWARP)</a>
+                <a>Utilities: Topcat, IRAF, specpro, Photometry programs(SExtractor, SCAMP, SWARP), ppxf</a>
               </li>
             </ul>
             <h2>-Languages</h2>
