--- a/index.html
+++ b/index.html
@@ -89,17 +89,17 @@
           <h1 class="name">HYOWON KIM </h1>
           <h2>[Hyo-Won-Kim/ jyo.won.kim/ 金孝元]</h2>
           <p>
-            " I like animals, especially cats and sea turtles. I like to play PC Game, TRPG and read and watch Science Fiction(Philip Kindred Dick, Andy Weir, ChoYeop Kim). <br class="blank" />
-            Nowadays, I'm learning Spanish and drawing Oil pastel paintings. And my specialty is ruining baking. Only one of the third can survive. <br class="blank" />
+            " I like animals, especially cats and sea turtles. I like playing PC Game, TRPG, reading, and watching Science Fiction (Philip Kindred Dick, Andy Weir, ChoYeop Kim). 
+            Nowadays, I'm learning Spanish and drawing Oil pastel paintings. And my specialty is ruining baking. Only one of the third can survive. 
             <br class="blank" />
-            I have experience with observation and data reduction in spectroscopy. I'm really interested in combining and applying simulation results to observation.<br class="blank" />
-            I'm studying the formation and evolution of the galaxy cluster. But I am also curious about the nature of the Large scale structure of the universe. <br class="blank" />
-            and how galaxies from past to present are connected to each other. "
+            I have experience with observation and data reduction in spectroscopy. I'm interested in combining and applying simulation results to observation.
+            I'm studying the formation and evolution of the galaxy cluster. But I am also curious about the nature of the Large-scale structure of the universe. 
+            And how galaxies from the past to the present are connected to each other. "
           </p>
           <div class="content-inner">
             <h2>Ph.D. candidate in UST-KASI campus</h2>
             <ul>
-              <li><a>Integrate Ph.D. Course of Astropysics since 2017</a></li>
+              <li><a>Integrate Ph.D. Course of Astrophysics since 2017</a></li>
               <li><a>Affiliation 1 : Korea, University of Science and Technology</a><a link href="https://www.ust.ac.kr" target="_blank">(UST)</a></li>
               <li><a>Affiliation 2 : Korea Astronomy and Space Science Institute</a><a link href="https://www.kasi.re.kr" target="_blank">(KASI)</a></li>
               <li><u><a link href="https://orcid.org/0000-0003-4032-8572"target="_blank">https://orcid.org/0000-0003-4032-8572</a></u></li>
@@ -118,7 +118,7 @@
             <h2>Education</h2>
             <ul>
               <li><a>2017-<b>2024.Feb.planned</b>) University of Science and Technology, Korea, Astrophysics and space science major, Integrated Ph.D. course.</a></li>
-              <li><a>2010-2015) Kyung Pook National University, Department of Astronomy and Atmospheric science, Bachelor of Astronomy</a></li>
+              <li><a>2010-2015) Kyung Pook National University, Department of Astronomy and Atmospheric Science, Bachelor of Astronomy</a></li>
             </ul>
           </div>
         </section>
@@ -175,11 +175,11 @@
             <span>Talks</span>
             <h2>-National</h2>
             <ul>
-              <li><a>Fall 2022) Korea astronomical society meeting, GyungJu/ Oral talk</a></li>
-              <li><a>Spring 2019) Korea astronomical society meeting, Busan/ Oral talk</a></li>
+              <li><a>Fall 2022) Korea Astronomical Society meeting, GyungJu/ Oral talk</a></li>
+              <li><a>Spring 2019) Korea Astronomical Society meeting, Busan/ Oral talk</a></li>
               <li><a>Jan 2019) Galaxy formation workshop 2019, Yonsei University/Oral talk</a></li>
               <li><a>Jan 2019) Infrared Medium-Deep Survey Workshop 2019, Seoul National University/ Oral talk</a></li>
-              <li><a>Fall 2018) Korea astronomical society meeting, ChungSong/Poster</a></li>
+              <li><a>Fall 2018) Korea Astronomical Society meeting, ChungSong/Poster</a></li>
             </ul>
             <h2>-International</h2>
             <ul>
