--- a/index.html
+++ b/index.html
@@ -115,6 +115,12 @@
             </ul>
           </div>
           <div class="content-inner">
+            <h2>Position</h2>
+            <ul>
+              <li><a> 2024.03. (Planned) : Postdoctoral researcher - Universidad Technica Frederico de Santa Maria, Chile </a></li>
+            </ul>
+          </div>
+          <div class="content-inner">
             <h2>Education</h2>
             <ul>
               <li><a>2017-<b>2024.Feb.planned</b>) University of Science and Technology, Korea, Astrophysics and space science major, Integrated Ph.D. course.</a></li>
@@ -201,6 +207,8 @@
             <span>Grants</span>
             <h2>-Fund</h2>
             <ul>
+              <li>
+              <a>2024.-2025.TBD 2023 ANID ALMA fund </a>
               <li>
                 <a>2022.Dec.-2023.Nov. - UST Young Scientist research fund</a>
               </li>
