--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
           <div class="content-inner">
             <h2>Position</h2>
             <ul>
-              <li><a> 2024.03. (Planned) : Postdoctoral researcher - Universidad Technica Frederico de Santa Maria, Chile </a></li>
+              <li><a> 2024.03. <b>(Planned)</b> : Postdoctoral researcher - Universidad Technica Frederico de Santa Maria, Chile </a></li>
             </ul>
           </div>
           <div class="content-inner">
             <h2>Education</h2>
             <ul>
-              <li><a>2017-<b>2024.Feb.planned</b>) University of Science and Technology, Korea, Astrophysics and space science major, Integrated Ph.D. course.</a></li>
+              <li><a>2017-2024.Feb.) University of Science and Technology, Korea, Astrophysics and space science major, Integrated Ph.D. course.</a></li>
               <li><a>2010-2015) Kyung Pook National University, Department of Astronomy and Atmospheric Science, Bachelor of Astronomy</a></li>
             </ul>
           </div>
