--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <h2>-Fund</h2>
             <ul>
               <li>
-              <a>2024.-2025.TBD 2023 ANID ALMA fund </a>
+              <a>2024.-2025.<b>(TBD)</b> - 2023 ANID ALMA fund </a>
               <li>
                 <a>2022.Dec.-2023.Nov. - UST Young Scientist research fund</a>
               </li>
