--- a/index.html
+++ b/index.html
@@ -178,6 +178,10 @@
 
             </ul>
           </div>
+            <div class="content-inner">
+            <span>Project</span>
+              <li><a link=""href="http://splus.iag.usp.br" target="_blank"> Southern Photometric Local Universe Survey (SPLUS) </a></li>
+            </div>
           <div class="content-inner">
             <span>Talks</span>
             <h2>-National</h2>
