--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <a href="#about" class="nav-title">
             <span class="nav-name">HYOWON KIM</span>
             <span>
-              <li><a>Ph.D. in Astronomy</a>
+              <li><a>Ph.D. in Astronomy</a></li>
               <img src="image/hyo1.jpg" alt="Hyowon" />
             </span>
           </a>
