--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <span>Homepage of Hyowon Kim in astronomy</span>
           <h1>ABOUT</h1>
           <h1 class="name">HYOWON KIM </h1>
-          <h2>[Hyo-Won-Kim/ jyo.won.kim/ 金孝元]</h2>
+          <h2>[ 김효원/ Hyo-Won-Kim/ jyo.won.kim/ 金孝元]</h2>
           <p>
             " I like animals, especially cats and sea turtles. I like playing PC Game, TRPG, reading, and watching Science Fiction (Philip Kindred Dick, Andy Weir, ChoYeop Kim). 
             Nowadays, I'm learning Spanish and drawing Oil pastel paintings. And my specialty is ruining baking. Only one of the third can survive. 
