--- a/index.html
+++ b/index.html
@@ -178,8 +178,9 @@
             </ul>
           </div>
             <div class="content-inner">
-            <span>Project</span>
+            <h2>Project</h2>
               <li><a link=""href="http://splus.iag.usp.br" target="_blank"> Southern Photometric Local Universe Survey (SPLUS) </a></li>
+              <li><a> KASI-Deep Rolling Imaging Fast Telescope (K-DRIFT) </a></li>
             </div>
           <div class="content-inner">
             <span>Talks</span>
