--- a/index.html
+++ b/index.html
@@ -93,8 +93,10 @@
             " I like animals, especially cats and sea turtles. I like playing PC Game, TRPG, reading, and watching Science Fiction (Philip Kindred Dick, Andy Weir, ChoYeop Kim). 
             Nowadays, I'm learning Spanish and drawing Oil pastel paintings. And my specialty is ruining baking. Only one of the third can survive. 
             <br class="blank" />
-            I have experience with observation and data reduction in spectroscopy. I'm interested in combining and applying simulation results to observation.
-            I'm studying the formation and evolution of the galaxy cluster. But I am also curious about the nature of the Large-scale structure of the universe. 
+            I have experience with observation and data reduction in spectroscopy. 
+            I'm interested in combining and applying simulation results to observation.
+            I'm researching the formation and evolution of the galaxy cluster. 
+            But I am also curious about the nature of the Large-scale structure of the universe. 
             And how galaxies from the past to the present are connected to each other. "
           </p>
           <div class="content-inner">
