--- a/index.html
+++ b/index.html
@@ -98,21 +98,21 @@
             And how galaxies from the past to the present are connected to each other. "
           </p>
           <div class="content-inner">
-            <h2>Ph.D. candidate in UST-KASI campus</h2>
+            <h2>Ph.D.</h2>
             <ul>
               <li><a>Integrate Ph.D. Course of Astrophysics since 2017</a></li>
-              <li><a>Affiliation 1 : Korea, University of Science and Technology</a><a link href="https://www.ust.ac.kr" target="_blank">(UST)</a></li>
-              <li><a>Affiliation 2 : Korea Astronomy and Space Science Institute</a><a link href="https://www.kasi.re.kr" target="_blank">(KASI)</a></li>
+              <!--<li><a>Affiliation 1 : Korea, University of Science and Technology</a><a link href="https://www.ust.ac.kr" target="_blank">(UST)</a></li>-->
+              <!--<li><a>Affiliation 2 : Korea Astronomy and Space Science Institute</a><a link href="https://www.kasi.re.kr" target="_blank">(KASI)</a></li>-->
               <li><u><a link href="https://orcid.org/0000-0003-4032-8572"target="_blank">https://orcid.org/0000-0003-4032-8572</a></u></li>
-              <li><u><a link href="http://galev.kasi.re.kr/doku.php" target="_blank">Galaxy Evolution group</a><a> in KASI</a></u></li>
+              <!--<li><u><a link href="http://galev.kasi.re.kr/doku.php" target="_blank">Galaxy Evolution group</a><a> in KASI</a></u></li> -->
               <li><a>Office : Room 204, LWC Hall, KASI,34055, Daejeon, Korea</a></li>
             </ul>
           </div>
           <div class="content-inner">
             <h2>References</h2>
             <ul>
+              <li><a> PI : Rory Smith [Universidad Technica Frederico de Santa Maria, Chile] rorysmith273[at]gmail.com</a></li>
               <li><a>Supervisor : Jongwan Ko [KASI,UST, Korea] jwko[at]kasi.re.kr</a></li>
-              <li><a>Co-supervisor : Rory Smith [Universidad Technica Frederico de Santa Maria, Chile] rorysmith273[at]gmail.com</a></li>
             </ul>
           </div>
           <div class="content-inner">
@@ -161,8 +161,12 @@
                 <a>"Mapping cluster dynamical state for the nearby universe with S_PLUS", TBD </a>
               </li>
             </ul>
-            <h2>-Paper:Co-author</h2>
+            <h2>-Paper:Co-author</h2> 
             <ul>
+              <li>
+                 <u><a link="" href="https://arxiv.org/abs/2402.17958" target="_blank"> 
+                   "Spatial Distribution of Intracluster Light versus Dark Matter in Horizon Run 5", Jaewon Yoo et al, 2024, ApJ, Accepted</a></u>
+              </li>
               <li>
                  <u><a link="" href="https://arxiv.org/abs/2308.08622" target="_blank"> 
                    "BCG alignment with the Locations of Cluster Members and the Large Scale Structure out to 10 R_200", Smith Rory et al, 2023, MNRAS, Accepted</a></u>
