--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
               <li>
                 <a href="mailto:hwkim1011@gmail.com">hwkim1011[at]gmail.com</a>
               </li>
-              <li><a href="mailto:kimyo1@kasi.re.kr">kimyo1[at]kasi.re.kr</a></li>
+              <!--<li><a href="mailto:kimyo1@kasi.re.kr">kimyo1[at]kasi.re.kr</a></li>-->
             </ul>
           </div>
         </section>
