--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <!--<li><a>Affiliation 2 : Korea Astronomy and Space Science Institute</a><a link href="https://www.kasi.re.kr" target="_blank">(KASI)</a></li>-->
               <li><u><a link href="https://orcid.org/0000-0003-4032-8572"target="_blank">https://orcid.org/0000-0003-4032-8572</a></u></li>
               <!--<li><u><a link href="http://galev.kasi.re.kr/doku.php" target="_blank">Galaxy Evolution group</a><a> in KASI</a></u></li> -->
-              <li><a>Office : Room 204, LWC Hall, KASI,34055, Daejeon, Korea</a></li>
+              <!--<li><a>Office : Room 204, LWC Hall, KASI,34055, Daejeon, Korea</a></li>-->
             </ul>
           </div>
           <div class="content-inner">
