--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
             <h2>Ph.D.</h2>
             <ul>
               <li><a>Integrate Ph.D. Course of Astrophysics since 2017</a></li>
+              <li><a></a></li>
               <!--<li><a>Affiliation 1 : Korea, University of Science and Technology</a><a link href="https://www.ust.ac.kr" target="_blank">(UST)</a></li>-->
               <!--<li><a>Affiliation 2 : Korea Astronomy and Space Science Institute</a><a link href="https://www.kasi.re.kr" target="_blank">(KASI)</a></li>-->
               <li><u><a link href="https://orcid.org/0000-0003-4032-8572"target="_blank">https://orcid.org/0000-0003-4032-8572</a></u></li>
@@ -118,7 +119,7 @@
           <div class="content-inner">
             <h2>Position</h2>
             <ul>
-              <li><a> 2024.03. <b>(Planned)</b> : Postdoctoral researcher - Universidad Technica Frederico de Santa Maria, Chile </a></li>
+              <li><a> 2024.05.- 2026.04. : Postdoctoral researcher - Universidad Technica Frederico de Santa Maria, Chile </a></li>
             </ul>
           </div>
           <div class="content-inner">
@@ -184,6 +185,7 @@
           </div>
             <div class="content-inner">
             <h2>Project</h2>
+              <li><a> LSST Korean DRH JA </a></li>
               <li><a link=""href="http://splus.iag.usp.br" target="_blank"> Southern Photometric Local Universe Survey (SPLUS) </a></li>
               <li><a> KASI-Deep Rolling Imaging Fast Telescope (K-DRIFT) </a></li>
             </div>
@@ -218,7 +220,7 @@
             <h2>-Fund</h2>
             <ul>
               <li>
-              <a>2024.-2025.<b>(TBD)</b> - 2023 ANID ALMA fund </a>
+              <a>2024.-2025. - 2023 ANID ALMA fund </a>
               <li>
                 <a>2022.Dec.-2023.Nov. - UST Young Scientist research fund</a>
               </li>
