--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
             <ul>
               <li>
                  <u><a link="" href="https://arxiv.org/abs/2402.17958" target="_blank"> 
-                   "Spatial Distribution of Intracluster Light versus Dark Matter in Horizon Run 5", Jaewon Yoo et al, 2024, ApJ, Accepted</a></u>
+                   "Spatial Distribution of Intracluster Light versus Dark Matter in Horizon Run 5", Jaewon Yoo et al, 2024, ApJ, Published</a></u>
               </li>
               <li>
                  <u><a link="" href="https://arxiv.org/abs/2308.08622" target="_blank"> 
-                   "BCG alignment with the Locations of Cluster Members and the Large Scale Structure out to 10 R_200", Smith Rory et al, 2023, MNRAS, Accepted</a></u>
+                   "BCG alignment with the Locations of Cluster Members and the Large Scale Structure out to 10 R_200", Smith Rory et al, 2023, MNRAS, Published</a></u>
               </li>
               <li>
                 <u><a link="" href="http://arxiv.org/abs/2205.08161" target="_blank">
