--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
             And how galaxies from the past to the present are connected to each other. "
           </p>
           <div class="content-inner">
-            <h2>Ph.D.</h2>
+            <h2>Postdoctoral researcher</h2>
             <ul>
-              <li><a>Integrate Ph.D. Course of Astrophysics since 2017</a></li>
-              <li><a></a></li>
+              <!--<li><a> Graduated Integrate Ph.D. Course of Astrophysics in UST since 2017</a></li>-->
+              <li><a>Affiliation : Departamento de Física, Universidad Técnica Federico Santa María, Avenida Vicuña Mackenna 3939, San Joaquín, Santiago de Chile </a></li>
               <!--<li><a>Affiliation 1 : Korea, University of Science and Technology</a><a link href="https://www.ust.ac.kr" target="_blank">(UST)</a></li>-->
               <!--<li><a>Affiliation 2 : Korea Astronomy and Space Science Institute</a><a link href="https://www.kasi.re.kr" target="_blank">(KASI)</a></li>-->
               <li><u><a link href="https://orcid.org/0000-0003-4032-8572"target="_blank">https://orcid.org/0000-0003-4032-8572</a></u></li>
