--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           </div>
             <div class="content-inner">
             <h2>Project</h2>
-              <li><a> LSST Korean DRH JA </a></li>
+              <li><a> LSST Korean Data Right Holde Junior Association </a></li>
               <li><a link=""href="http://splus.iag.usp.br" target="_blank"> Southern Photometric Local Universe Survey (SPLUS) </a></li>
               <li><a> KASI-Deep Rolling Imaging Fast Telescope (K-DRIFT) </a></li>
             </div>
