--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                   dynamical state?”, 2022,ApJ,<b> Published</b> / </a><a link="" href="https://arxiv.org/abs/2202.02957" target="_blank" >arxiv:2202.02957</a></u>
               </li>
               <li>
-                <a>"New observational recipes for measuring dynamical state of galaxy clusters",2023, submitted in ApJ </a>
+                <a>"New observational recipes for measuring dynamical state of galaxy clusters",2024, Accepted in ApJ </a>
               </li>
               <li>
                 <a>"The origin of a fossil cluster by testing the M* galaxy merger hypothesis", In preparation </a>
