--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                 <u><a link=""href="https://iopscience.iop.org/article/10.3847/1538-4357/ac510e" target="_blank"> “Is Abell 2261 a fossil galaxy cluster in a transitional
                   dynamical state?”, 2022,ApJ,<b> Published</b> / </a><a link="" href="https://arxiv.org/abs/2202.02957" target="_blank" >arxiv:2202.02957</a></u>
               </li>
-              <li>
-                <a>"New observational recipes for measuring dynamical state of galaxy clusters",2024, Accepted in ApJ </a>
+              <li> 
+               <u><a link=""href="https://arxiv.org/abs/2405.06245" target="_blank">"New observational recipes for measuring dynamical state of galaxy clusters",2024, Accepted in ApJ </a></u>
               </li>
               <li>
                 <a>"The origin of a fossil cluster by testing the M* galaxy merger hypothesis", In preparation </a>
