--- a/index.html
+++ b/index.html
@@ -186,9 +186,16 @@
             <div class="content-inner">
             <h2>Project</h2>
               <li><a> LSST Korean Data Right Holde Junior Association </a></li>
-              <li><a link=""href="http://splus.iag.usp.br" target="_blank"> Southern Photometric Local Universe Survey (SPLUS) </a></li>
+              <li><a link=""href="https://www.splus.iag.usp.br/" target="_blank"> Southern Photometric Local Universe Survey (SPLUS) </a></li>
               <li><a> KASI-Deep Rolling Imaging Fast Telescope (K-DRIFT) </a></li>
             </div>
+          <div class="content-inner">
+            <h2>member</h2>
+            <li><a>KAS</a></li>
+            <li><a>AAS</a></li>
+          <li><a link=""href="https://sochias.cl/tiempo-de-observacion/lista-blanca/" target="_blank">SOCHIAS_lista blanca</a></li>
+          </div>
+          
           <div class="content-inner">
             <span>Talks</span>
             <h2>-National</h2>
