--- a/index.html
+++ b/index.html
@@ -185,14 +185,14 @@
           </div>
             <div class="content-inner">
             <h2>Project</h2>
-              <li><a> LSST Korean Data Right Holde Junior Association </a></li>
+              <li><a link=""href="https://sites.google.com/view/koreanrubinscience/home" target="_blank"> LSST Korean Data Right Holde Junior Association </a></li>
               <li><a link=""href="https://www.splus.iag.usp.br/" target="_blank"> Southern Photometric Local Universe Survey (SPLUS) </a></li>
               <li><a> KASI-Deep Rolling Imaging Fast Telescope (K-DRIFT) </a></li>
             </div>
           <div class="content-inner">
             <h2>member</h2>
-            <li><a>KAS</a></li>
-            <li><a>AAS</a></li>
+            <li><a link=""href="https://en.kas.org/" target="_blank">KAS</a></li>
+            <li><a link=""href="https://aas.org/" target="_blank">AAS</a></li>
           <li><a link=""href="https://sochias.cl/tiempo-de-observacion/lista-blanca/" target="_blank">SOCHIAS_lista blanca</a></li>
           </div>
           
