--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
             </div>
           <div class="content-inner">
             <h2>member</h2>
-            <li><u><a link=""href="https://en.kas.org/" target="_blank">KAS</a></u></li>
-            <li><u><a link=""href="https://aas.org/" target="_blank">AAS</a></u></li>
-          <li><u><a link=""href="https://sochias.cl/tiempo-de-observacion/lista-blanca/" target="_blank">SOCHIAS_lista blanca</a></u></li>
+            <li><u><a link=""href="https://en.kas.org/" target="_blank">Korean Astronomical Society (KAS)</a></u></li>
+            <li><u><a link=""href="https://aas.org/" target="_blank">Amerian Astronomical Society (AAS)</a></u></li>
+          <li><u><a link=""href="https://sochias.cl/tiempo-de-observacion/lista-blanca/" target="_blank">SOciedad CHIlena de AStronomia_lista blanca (SOCHIAS)</a></u></li>
           </div>
           
           <div class="content-inner">
