--- a/index.html
+++ b/index.html
@@ -264,7 +264,11 @@
               <li><a>Languages: IDL, Python</a></li>
               <li><a>WebD: HTML/CSS, JavaScript</a></li>
               <li>
-                <a>Utilities: Topcat, IRAF, specpro, Photometry programs(SExtractor, SCAMP, SWARP), ppxf</a>
+                <a>Utilities: </a><a link=""href="https://www.star.bris.ac.uk/~mbt/topcat/"target="_blank">Topcat</a>
+                <a>, IRAF, </a>
+                <a link=""href="http://specpro.caltech.edu/"target="_blank"> specpro</a>
+                <a>, Photometry programs(SExtractor, SCAMP, SWARP),</a>
+                <a link=""href="https://www-astro.physics.ox.ac.uk/~cappellari/software/#ppxf/"target="_blank">ppxf</a> 
               </li>
             </ul>
             <h2>-Languages</h2>
