--- a/index.html
+++ b/index.html
@@ -245,15 +245,15 @@
             </ul>
             <h2>-Simulations</h2>
             <ul>
-              <li><a>Illustris-TNG,</a> <a link=""href="https://data.kasi.re.kr/vo/N_cluster_run/"target="_blank">N-cluster run</a></li>
+              <li><a>Illustris-TNG,</a> <u><a link=""href="https://data.kasi.re.kr/vo/N_cluster_run/"target="_blank">N-cluster run</a></u></li>
             </ul>
           </div>
           <div class="content-inner">
             <span>Public Outreach</span>
             <ul>
               <li>
-                <u><a link=""href="http://wiki.kas.org/mw2/index.php/"target="_blank"> Korea Astronomy encyclopedia</a>
-                <a> - Copyright check team</a></u>
+                <u><a link=""href="http://wiki.kas.org/mw2/index.php/"target="_blank"> Korea Astronomy encyclopedia</a></u>
+                <a> - Copyright check team</a>
               </li>
             </ul>
           </div>
@@ -264,11 +264,11 @@
               <li><a>Languages: IDL, Python</a></li>
               <li><a>WebD: HTML/CSS, JavaScript</a></li>
               <li>
-                <a>Utilities: </a><a link=""href="https://www.star.bris.ac.uk/~mbt/topcat/"target="_blank">Topcat</a>
+                <a>Utilities: </a><u><a link=""href="https://www.star.bris.ac.uk/~mbt/topcat/"target="_blank">Topcat</a></u>
                 <a>, IRAF, </a>
-                <a link=""href="http://specpro.caltech.edu/"target="_blank"> specpro</a>
+                <u><a link=""href="http://specpro.caltech.edu/"target="_blank"> specpro</a></u>
                 <a>, Photometry programs(SExtractor, SCAMP, SWARP),</a>
-                <a link=""href="https://www-astro.physics.ox.ac.uk/~cappellari/software/#ppxf/"target="_blank">ppxf</a> 
+                <u><a link=""href="https://www-astro.physics.ox.ac.uk/~cappellari/software/#ppxf/"target="_blank">ppxf</a></u>
               </li>
             </ul>
             <h2>-Languages</h2>
