--- a/index.html
+++ b/index.html
@@ -245,7 +245,8 @@
             </ul>
             <h2>-Simulations</h2>
             <ul>
-              <li><a>Illustris-TNG,</a> <u><a link=""href="https://data.kasi.re.kr/vo/N_cluster_run/"target="_blank">N-cluster run</a></u></li>
+              <li><u><a link=""href="https://www.tng-project.org/"target="_blank">Illustris-TNG,</a></u> 
+                <u><a link=""href="https://data.kasi.re.kr/vo/N_cluster_run/"target="_blank">N-cluster run</a></u></li>
             </ul>
           </div>
           <div class="content-inner">
