--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <a>"The origin of a fossil cluster by testing the M* galaxy merger hypothesis", In preparation </a>
               </li>
               <li>
-                <a>"Mapping cluster dynamical state for the nearby universe with S_PLUS", TBD </a>
+                <a>"Mapping cluster dynamical state for the nearby universe with S_PLUS", In preparation </a>
               </li>
             </ul>
             <h2>-Paper:Co-author</h2> 
