--- a/index.html
+++ b/index.html
@@ -148,13 +148,17 @@
             <p>(If you click the title, then the paper page will be connected.)</p>
             <h2>-Paper:1st author</h2>
             <ul>
-              <li>
-                <u><a link=""href="https://iopscience.iop.org/article/10.3847/1538-4357/ac510e" target="_blank"> “Is Abell 2261 a fossil galaxy cluster in a transitional
-                  dynamical state?”, 2022,ApJ,<b> Published</b> / </a><a link="" href="https://arxiv.org/abs/2202.02957" target="_blank" >arxiv:2202.02957</a></u>
-              </li>
               <li> 
-               <u><a> "New observational recipes for measuring dynamical state of galaxy clusters",2024,</a><a  link=""href="https://iopscience.iop.org/article/10.3847/1538-4357/ad4f80" target="_blank"> Published in ApJ /</a> <a link=""href="https://arxiv.org/abs/2405.06245" target="_blank">arxiv:2405.06245 </a></u>
+               <u><a> "New observational recipes for measuring dynamical state of galaxy clusters",2024,ApJ</a> 
+                 <a link=""href="https://iopscience.iop.org/article/10.3847/1538-4357/ad4f80" target="_blank"><b> Published</b>b>/</a> 
+                 <a link=""href="https://arxiv.org/abs/2405.06245" target="_blank">arxiv:2405.06245 </a></u>
               </li>
+              <li>
+                <u><a link=""href="https://iopscience.iop.org/article/10.3847/1538-4357/ac510e" target="_blank">
+                  “Is Abell 2261 a fossil galaxy cluster in a transitional dynamical state?”, 2022,ApJ,<b> Published</b> / </a>
+                  <a link="" href="https://arxiv.org/abs/2202.02957" target="_blank" >arxiv:2202.02957</a></u>
+              </li>
+
               <li>
                 <a>"The origin of a fossil cluster by testing the M* galaxy merger hypothesis", In preparation </a>
               </li>
