--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <ul>
               <li> 
                <u><a> "New observational recipes for measuring dynamical state of galaxy clusters",2024,ApJ</a> 
-                 <a link=""href="https://iopscience.iop.org/article/10.3847/1538-4357/ad4f80" target="_blank"><b> Published</b>b>/</a> 
+                 <a link=""href="https://iopscience.iop.org/article/10.3847/1538-4357/ad4f80" target="_blank"><b> Published</b>/</a> 
                  <a link=""href="https://arxiv.org/abs/2405.06245" target="_blank">arxiv:2405.06245 </a></u>
               </li>
               <li>
