--- a/index.html
+++ b/index.html
@@ -188,13 +188,13 @@
             </ul>
           </div>
             <div class="content-inner">
-            <h2>Project</h2>
+            <h2>Team Project</h2>
               <li><u><a link=""href="https://sites.google.com/view/koreanrubinscience/home" target="_blank"> LSST Korean Data Right Holde Junior Association </a></u></li>
               <li><u><a link=""href="https://www.splus.iag.usp.br/" target="_blank"> Southern Photometric Local Universe Survey (SPLUS) </a></u></li>
               <li><a> KASI-Deep Rolling Imaging Fast Telescope (K-DRIFT) </a></li>
             </div>
           <div class="content-inner">
-            <h2>member</h2>
+            <h2>Membership of Astronomical society</h2>
             <li><u><a link=""href="https://en.kas.org/" target="_blank">Korean Astronomical Society (KAS)</a></u></li>
             <li><u><a link=""href="https://aas.org/" target="_blank">Amerian Astronomical Society (AAS)</a></u></li>
           <li><u><a link=""href="https://sochias.cl/tiempo-de-observacion/lista-blanca/" target="_blank">SOciedad CHIlena de AStronomia_lista blanca (SOCHIAS)</a></u></li>
