--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <li><a href="#research">RESEARCH</a></li>
             <li><a href="#experiences">EXPERIENCES</a></li>
             <li><a href="#contact">CONTACT</a></li>
+            <li><a link="" href="states.html" target="_blank"> App</a></li>
           </div>
           <!-- <button class="nav-icon nav-toggle">
             <i class="fa-solid fa-bars"></i>
