--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
             </ul>
             <h2>-International</h2>
             <ul>
+              <li><a>Aug 2024) The 19th S-PLUS collaboration meeting, Brazil/ Oral talk</a></li>
               <li><a>Jun 2023) Meeting of the American Astronomical Society, U.S./ Poster</a></li>
               <li><a>May 2023) Galaxy Groups and Clusters III, Chile/ Oral talk</a></li>
               <li><a>Fed 2023) 2023 Galaxy evolution workshop, Japan/ Poster+flash talk</a></li>
