--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
             And how galaxies from the past to the present are connected to each other. "
           </p>
           <div class="content-inner">
-            <h2>Postdoctoral researcher</h2>
+            <h2>Information</h2>
             <ul>
-              <!--<li><a> Graduated Integrate Ph.D. Course of Astrophysics in UST since 2017</a></li>-->
               <li><a>Affiliation : Departamento de Física, Universidad Técnica Federico Santa María, Avenida Vicuña Mackenna 3939, San Joaquín, Santiago de Chile </a></li>
               <!--<li><a>Affiliation 1 : Korea, University of Science and Technology</a><a link href="https://www.ust.ac.kr" target="_blank">(UST)</a></li>-->
               <!--<li><a>Affiliation 2 : Korea Astronomy and Space Science Institute</a><a link href="https://www.kasi.re.kr" target="_blank">(KASI)</a></li>-->
               <li><u><a link href="https://orcid.org/0000-0003-4032-8572"target="_blank">https://orcid.org/0000-0003-4032-8572</a></u></li>
               <!--<li><u><a link href="http://galev.kasi.re.kr/doku.php" target="_blank">Galaxy Evolution group</a><a> in KASI</a></u></li> -->
               <!--<li><a>Office : Room 204, LWC Hall, KASI,34055, Daejeon, Korea</a></li>-->
+              <li><a>Office : Room 648K, Edificio F, Universidad Técnica Federico Santa María, Avenida Vicuña Mackenna 3939, San Joaquín, Santiago, Chile</a></li>
             </ul>
           </div>
           <div class="content-inner">
