--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <li><u><a link href="https://orcid.org/0000-0003-4032-8572"target="_blank">https://orcid.org/0000-0003-4032-8572</a></u></li>
               <!--<li><u><a link href="http://galev.kasi.re.kr/doku.php" target="_blank">Galaxy Evolution group</a><a> in KASI</a></u></li> -->
               <!--<li><a>Office : Room 204, LWC Hall, KASI,34055, Daejeon, Korea</a></li>-->
-              <li><a>Office : Room 648K, Edificio F, Universidad Técnica Federico Santa María, Avenida Vicuña Mackenna 3939, San Joaquín, Santiago, Chile</a></li>
+              <li><a>Office : Room 648K, Edificio K, Universidad Técnica Federico Santa María, Avenida Vicuña Mackenna 3939, San Joaquín, Santiago, Chile</a></li>
             </ul>
           </div>
           <div class="content-inner">
