--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <div class="content-inner">
             <h2>References</h2>
             <ul>
-              <li><a> PI : Rory Smith [Universidad Technica Frederico de Santa Maria, Chile] rorysmith273[at]gmail.com</a></li>
+              <li><a> PI : Rory Smith [Universidad Technica Frederico de Santa Maria, Chile] rory.smith[at]usm.cl</a></li>
               <li><a>Supervisor : Jongwan Ko [KASI,UST, Korea] jwko[at]kasi.re.kr</a></li>
             </ul>
           </div>
