--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
           <h2>[ 김효원/ Hyo-Won-Kim/ jyo.won.kim/ 金孝元]</h2>
           <p>
             " I like animals, especially cats and sea turtles. I like playing PC Game, TRPG, reading, and watching Science Fiction (Philip Kindred Dick, Andy Weir, ChoYeop Kim). 
-            Nowadays, I'm learning Spanish and drawing Oil pastel paintings. And my specialty is ruining baking. Only one of the third can survive. 
+            Nowadays, I'm learning Spanish and doing crochet. And my specialty is ruining baking. Only one of the third can survive. 
             <br class="blank" />
-            I have experience with observation and data reduction in spectroscopy. 
-            I'm interested in combining and applying simulation results to observation.
-            I'm researching the formation and evolution of the galaxy cluster. 
+            I have experience in observation and data reduction in spectroscopy. 
+            I'm interested in combining and applying results from simulation to observation data.
+            I'm researching the formation and evolution of the galaxy cluster and BCG. 
             But I am also curious about the nature of the Large-scale structure of the universe. 
-            And how galaxies from the past to the present are connected to each other. "
+            And how galaxies are connected from the past to the present. "
           </p>
           <div class="content-inner">
             <h2>Information</h2>
