--- a/index.html
+++ b/index.html
@@ -89,14 +89,15 @@
           <h1>ABOUT</h1>
           <h2>[ 김효원/ Hyo-Won-Kim/ jyo.won.kim/ 金孝元]</h2>
           <p>
-            " I like animals, especially cats and sea turtles. I like playing PC Game, TRPG, reading, and watching Science Fiction (Philip Kindred Dick, Andy Weir, ChoYeop Kim). 
-            Nowadays, I'm learning Spanish and doing crochet. And my specialty is ruining baking. Only one of the third can survive. 
+            " I like animals, especially cats and sea turtles. </p>
+          <p>I like playing PC Game, TRPG, reading, and watching Science Fiction (Philip Kindred Dick, Andy Weir, ChoYeop Kim). </p>
+            <p> Nowadays, I'm learning Spanish and doing crochet. And my specialty is ruining baking. Only one of the third can survive. </p>
             <br class="blank" />
-            I have experience in observation and data reduction in spectroscopy. 
-            I'm interested in combining and applying results from simulation to observation data.
-            I'm researching the formation and evolution of the galaxy cluster and BCG. 
-            But I am also curious about the nature of the Large-scale structure of the universe. 
-            And how galaxies are connected from the past to the present. "
+            <p>I have experience in observation and data reduction in spectroscopy. </p>
+            <p>I'm interested in combining and applying results from simulation to observation data.</p>
+            <p>I'm researching the formation and evolution of the galaxy cluster and BCG. </p>
+           <p> But I am also curious about the nature of the Large-scale structure of the universe. </p>
+           <p> And how galaxies are connected from the past to the present. "
           </p>
           <div class="content-inner">
             <h2>Information</h2>
