--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             <li><a href="#experiences">EXPERIENCES</a></li>
             <li><a href="#contact">CONTACT</a></li>
             <li><a link="" href="states.html" target="_blank"> App</a></li>
+            <li><a link="https://github.com/kimyo1/rotation-method-for-cluster-dynamical-state/tree/main" target="_blank"> Repository </a></li>
           </div>
           <!-- <button class="nav-icon nav-toggle">
             <i class="fa-solid fa-bars"></i>
@@ -102,13 +103,13 @@
           <div class="content-inner">
             <h2>Information</h2>
             <ul>
-              <li><a>Affiliation : Departamento de Física, Universidad Técnica Federico Santa María, Avenida Vicuña Mackenna 3939, San Joaquín, Santiago de Chile </a></li>
+              <li><a>Affiliation : Departamento de Física, Universidad Técnica Federico Santa María, Av. España 1680, Valparaiso de Chile </a></li>
               <!--<li><a>Affiliation 1 : Korea, University of Science and Technology</a><a link href="https://www.ust.ac.kr" target="_blank">(UST)</a></li>-->
               <!--<li><a>Affiliation 2 : Korea Astronomy and Space Science Institute</a><a link href="https://www.kasi.re.kr" target="_blank">(KASI)</a></li>-->
               <li><u><a link href="https://orcid.org/0000-0003-4032-8572"target="_blank">https://orcid.org/0000-0003-4032-8572</a></u></li>
               <!--<li><u><a link href="http://galev.kasi.re.kr/doku.php" target="_blank">Galaxy Evolution group</a><a> in KASI</a></u></li> -->
               <!--<li><a>Office : Room 204, LWC Hall, KASI,34055, Daejeon, Korea</a></li>-->
-              <li><a>Office : Room 648K, Edificio K, Universidad Técnica Federico Santa María, Avenida Vicuña Mackenna 3939, San Joaquín, Santiago, Chile</a></li>
+              <li><a>Office : Sala de post-doctorado, 5th floor, Edificio E </a></li>
             </ul>
           </div>
           <div class="content-inner">
@@ -291,8 +292,13 @@
               <li>
                 <a href="mailto:hwkim1011@gmail.com">hwkim1011[at]gmail.com</a>
               </li>
+              <li>
+                <a href="mailto:hyowon.kim@usm.cl">hyowon.kim@usm.cl</a>
+              </li>
               <!--<li><a href="mailto:kimyo1@kasi.re.kr">kimyo1[at]kasi.re.kr</a></li>-->
             </ul>
+            <h2>Repository</h2>
+            <li><a link="https://github.com/kimyo1/rotation-method-for-cluster-dynamical-state/tree/main" target="_blank"> git hub Repository </a></li>
           </div>
         </section>
         <!-- scroll top -->
