--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 <a href="mailto:hwkim1011@gmail.com">hwkim1011[at]gmail.com</a>
               </li>
               <li>
-                <a href="mailto:hyowon.kim@usm.cl">hyowon.kim@usm.cl</a>
+                <a href="mailto:hyowon.kim@usm.cl">hyowon.kim[at]usm.cl</a>
               </li>
               <!--<li><a href="mailto:kimyo1@kasi.re.kr">kimyo1[at]kasi.re.kr</a></li>-->
             </ul>
