--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           </div>
             <div class="content-inner">
             <h2>Team Project</h2>
-              <--<li><u><a link=""href="https://sites.google.com/view/koreanrubinscience/home" target="_blank"> LSST Korean Data Right Holde Junior Association </a></u></li>-->
+              <!-- <li><u><a link=""href="https://sites.google.com/view/koreanrubinscience/home" target="_blank"> LSST Korean Data Right Holde Junior Association </a></u></li> -->
               <li><u><a link=""href="https://www.nucleomingal.cl/" target="_blank"> Nucleo Milenio de Galaxieas (MINGAL) </a></u></li>
               <li><u><a link=""href="https://www.splus.iag.usp.br/" target="_blank"> Southern Photometric Local Universe Survey (SPLUS) </a></u></li>
               <li><a> KASI-Deep Rolling Imaging Fast Telescope (K-DRIFT) </a></li>
