--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <li><a href="#experiences">EXPERIENCES</a></li>
             <li><a href="#contact">CONTACT</a></li>
             <li><a link="" href="states.html" target="_blank"> App</a></li>
-            <li><a link="" href="https://github.com/kimyo1/rotation-method-for-cluster-dynamical-state/tree/main" target="_blank"> Repository </a></li>
+           <!-- <li><a link="" href="https://github.com/kimyo1/rotation-method-for-cluster-dynamical-state/tree/main" target="_blank"> Repository </a></li> -->
           </div>
           <!-- <button class="nav-icon nav-toggle">
             <i class="fa-solid fa-bars"></i>
@@ -299,7 +299,7 @@
               <!--<li><a href="mailto:kimyo1@kasi.re.kr">kimyo1[at]kasi.re.kr</a></li>-->
             </ul>
             <h2>Repository</h2>
-            <li><a link="" href="https://github.com/kimyo1/rotation-method-for-cluster-dynamical-state/tree/main" target="_blank"> git hub Repository </a></li>
+            <!-- <li><a link="" href="https://github.com/kimyo1/rotation-method-for-cluster-dynamical-state/tree/main" target="_blank"> git hub Repository </a></li> -->
           </div>
         </section>
         <!-- scroll top -->
