--- a/index.html
+++ b/index.html
@@ -148,45 +148,8 @@
           </div>
           <div class="content-inner">
             <span>Publications</span>
-            <p>(If you click the title, then the paper page will be connected.)</p>
-            <h2>-Paper:1st author</h2>
             <ul>
-              <li>
-                <a>"The origin of a fossil cluster by testing the M* galaxy merger hypothesis", In preparation </a>
-              </li>
-              <li>
-                <a>"Mapping cluster dynamical state for the nearby universe with S_PLUS", In preparation </a>
-              </li>
-              <li> 
-               <u><a> "New observational recipes for measuring dynamical state of galaxy clusters", 2024, ApJ,</a> 
-                 <a link=""href="https://iopscience.iop.org/article/10.3847/1538-4357/ad4f80" target="_blank"><b> Published</b>/</a> 
-                 <a link=""href="https://arxiv.org/abs/2405.06245" target="_blank">arxiv:2405.06245 </a></u>
-              </li>
-              <li>
-                <u><a link=""href="https://iopscience.iop.org/article/10.3847/1538-4357/ac510e" target="_blank">
-                  “Is Abell 2261 a fossil galaxy cluster in a transitional dynamical state?”, 2022, ApJ, <b> Published</b> / </a>
-                  <a link="" href="https://arxiv.org/abs/2202.02957" target="_blank" >arxiv:2202.02957</a></u>
-              </li>
-            </ul>
-            <h2>-Paper:Co-author</h2> 
-            <ul>
-              <li>
-                 <u><a link="" href="https://arxiv.org/abs/2402.17958" target="_blank"> 
-                   "Spatial Distribution of Intracluster Light versus Dark Matter in Horizon Run 5", Jaewon Yoo et al, 2024, ApJ, Published</a></u>
-              </li>
-              <li>
-                 <u><a link="" href="https://arxiv.org/abs/2308.08622" target="_blank"> 
-                   "BCG alignment with the Locations of Cluster Members and the Large Scale Structure out to 10 R_200", Smith Rory et al, 2023, MNRAS, Published</a></u>
-              </li>
-              <li>
-                <u><a link="" href="http://arxiv.org/abs/2205.08161" target="_blank">
-                  "How to quantify the similarity of 2D distributions:Comparison of spatial distribution of Intracluster light and Dark Matter", Jaewon Yoo et al, 2022, ApJs, Published</a></u>
-              </li>
-              <li>
-                <u><a link=""href="https://arxiv.org/abs/2109.12121" target="_blank">
-                  “Intracluster light properties in a fossil cluster at z =0.47”, Jaewon Yoo et al,2021,MNRAS,Published</a></u>
-              </li>
-
+            <li><u><a link=""href="https://ui.adsabs.harvard.edu/public-libraries/3oDpvOWnSH6GsH9UpU0bJg" target="_blank"> ADS library</a></u></li>
             </ul>
           </div>
             <div class="content-inner">
